Archive2/a2/b704ef05e83d0b/output
main.cpp:13:2: error: unknown type name 'BOOL'
        BOOL fSuccess = TRUE;
        ^
main.cpp:13:18: error: use of undeclared identifier 'TRUE'
        BOOL fSuccess = TRUE;
                        ^
main.cpp:16:31: error: use of undeclared identifier 'NULL'
        if ((hWav = (HWAV) lpWav) == NULL)
                                     ^
main.cpp:17:14: error: use of undeclared identifier 'FALSE'
                fSuccess = FALSE;
                           ^
main.cpp:19:27: error: use of undeclared identifier 'NULL'
        return fSuccess ? hWav : NULL;
                                 ^
5 errors generated.
